# ITKVideoGrabber

./: CMakeLists.txt  README  itk-module.cmake
Base/: CMakeLists.txt  itk-module.cmake
Base/include/: itkVideoGrabber.h  itkVideoGrabber.txx  itkVideoGrabberBase.h  itkVideoGrabberFactory.h  itkVideoGrabberInterfaceBase.h  itkVideoGrabberInterfaceFactory.h
Base/src/: CMakeLists.txt  itkVideoGrabberBase.cxx  itkVideoGrabberFactory.cxx  itkVideoGrabberInterfaceBase.cxx  itkVideoGrabberInterfaceFactory.cxx
Base/test/: CMakeLists.txt  itkVideoVideoGrabberTest.cxx
Cmake/: FindEpiphan.cmake
Data/Input/: MISR_Parallax.mov  stonehenge1.AVI
Epiphan/: CMakeLists.txt  itk-module.cmake
Epiphan/include/: itkEpiphanVideoGrabber.h  itkEpiphanVideoGrabberFactory.h  itkEpiphanVideoGrabberInterface.h  itkEpiphanVideoGrabberInterfaceFactory.h
Epiphan/src/: CMakeLists.txt  itkEpiphanVideoGrabberInterface.cxx  itkEpiphanVideoGrabberInterfaceFactory.cxx
Epiphan/test/: CMakeLists.txt  itkEpiphanVideoGrabberFactoryTest.cxx  itkEpiphanVideoGrabberTest.cxx
Example/: CMakeLists.txt  OpenCVVideoGrabberExample1.cxx  OpenCVVideoGrabberExample2.cxx
Examples/: CMakeLists.txt  OpenCVVideoGrabberExample1.cxx  OpenCVVideoGrabberExample2.cxx  OpenCVVideoGrabberExample3.cxx  OpenCVVideoGrabberExample4.cxx  OpenCVVideoGrabberExample5.cxx  OpenCVVideoGrabberExample7.cxx  VideoGrabberOpenCVExample1.cxx  VideoGrabberOpenCVExample2.cxx  VideoGrabberOpenCVExample3.cxx  VideoGrabberOpenCVExample4.cxx  VideoGrabberOpenCVExample5.cxx  VideoGrabberOpenCVExample6.cxx  VideoGrabberOpenCVExample7.cxx  itkVideoGrabberCommandLineProgressReporter.cxx  itkVideoGrabberCommandLineProgressReporter.h
Linux1394/: CMakeLists.txt  itk-module.cmake
Linux1394/include/: itkLinux1394VideoGrabberInterface.h  itkLinux1394VideoGrabberInterfaceFactory.h
Linux1394/src/: itkLinux1394VideoGrabberInterface.cxx  itkLinux1394VideoGrabberInterfaceFactory.cxx
OpenCV/: CMakeLists.txt  itk-module.cmake
OpenCV/Examples/: CMakeLists.txt  VideoGrabberOpenCVExample2.cxx  VideoGrabberOpenCVExample3.cxx
OpenCV/include/: itkOpenCVVideoGrabber.h  itkOpenCVVideoGrabberFactory.h  itkOpenCVVideoGrabberInterface.h  itkOpenCVVideoGrabberInterfaceFactory.h
OpenCV/src/: CMakeLists.txt  itkOpenCVVideoGrabber.cxx  itkOpenCVVideoGrabberFactory.cxx  itkOpenCVVideoGrabberInterface.cxx  itkOpenCVVideoGrabberInterfaceFactory.cxx
OpenCV/test/: CMakeLists.txt  VideoGrabberOpenCVTest3.cxx  VideoGrabberOpenCVTest5.cxx  VideoGrabberOpenCVTest6.cxx  itkOpenCVVideoGrabberFactoryTest.cxx  itkOpenCVVideoGrabberTest.cxx
V4L2/: CMakeLists.txt  itk-module.cmake
V4L2/include/: itkV4L2VideoGrabberInterface.h  itkV4L2VideoGrabberInterfaceFactory.h
V4L2/src/: itkV4L2VideoGrabberInterface.cxx  itkV4L2VideoGrabberInterfaceFactory.cxx
src/: CMakeLists.txt
test/: CMakeLists.txt  OpenCVVideoGrabberTest1.cxx  OpenCVVideoGrabberTest2.cxx  OpenCVVideoGrabberTest3.cxx  OpenCVVideoGrabberTest4.cxx  OpenCVVideoGrabberTest5.cxx  OpenCVVideoGrabberTest6.cxx  VideoGrabberOpenCVTest1.cxx  VideoGrabberOpenCVTest2.cxx  VideoGrabberOpenCVTest4.cxx
